# FlashRT

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  cmds.md  pyproject.toml
csrc/: bindings.cpp
csrc/gemm/: cutlass_sm80_int8_rowwise.cu  cutlass_sm80_int8_rowwise_t64x128.cu  cutlass_sm80_int8_silu_gated.cu  gemm_runner.cu  gemm_runner.h
csrc/kernels/: activation.cu  activation.cuh  attention_cublas.cu  attention_cublas.cuh  common.cuh  dvt2_heads.cu  fusion.cu  fusion.cuh  norm.cu  norm.cuh  quantize.cu  quantize.cuh  softmax.cu  softmax.cuh
docs/: deployment_orin.md  exec_contract.md  qwen36_usage.md  serving_design.md  serving_production.md  stable_api.md
examples/: compare_openpi_flashrt_outputs.py  extract_h10w_exist_obs.py  extract_lerobot_calib_obs.py  pi05_thor_offline_calibrate.py  pi05_websocket_policy_server.py  quickstart.py  rtx4090_jax_pi05_cli.py  rtx4090_state_prompt_latency.py
examples/llm_agent/: Cargo.toml  README.md  build.rs
examples/llm_agent/src/: main.rs
examples/orin/: bench_pi05.py
examples/robot_host/: README.md  realtime_host.cpp
exec/: CMakeLists.txt
exec/backend/: backend.h
exec/backend/cuda/: cuda_backend.cpp
exec/bindings/: exec_pybind.cpp
exec/include/flashrt/: exec.h
exec/src/: buffer.cpp  context.cpp  graph.cpp  internal.h  plan.cpp
exec/tests/: gate_exec_decode.py  gate_pi05_exec.py  test_adopt_pi05.py  test_adopt_qwen36.py  test_exec.py
flash_rt/: api.py
flash_rt/core/: calibration.py  cuda_buffer.py  precision_spec.py  thor_frontend_utils.py
flash_rt/core/utils/: actions.py  dvt2_policy.py  hardware.py  norm_stats.py
flash_rt/core/weights/: loader.py  transformer.py
flash_rt/frontends/jax/: pi05_rtx.py  pi05_thor.py
flash_rt/frontends/torch/: pi05_rtx.py  qwen36_rtx.py
flash_rt/hardware/: __init__.py
flash_rt/hardware/rtx/: attn_backend.py
flash_rt/hardware/thor/: attn_backend.py  shared_primitives.py
flash_rt/models/pi05/: pipeline_rtx.py  pipeline_rtx_fp16.py
flash_rt/runtime/: exec.py
serving/: README.md
serving/qwen36_agent/: README.md  auto_prefix.py  capsules.md  qwen36_engine.py  server.py  service.py  session.py
serving/robot_pi07/: verify_pi07.py
serving/robot_recap/: README.md  rollout_host.py  verify_capsule.py  verify_recap.py
tests/: test_actions.py  test_calibration_helpers.py  test_dvt2_policy.py  test_load_model_use_fp8_kwarg.py  test_precision_spec.py  test_qwen36_agent_capsule_serving.py  test_qwen36_agent_gpu_split.py  test_qwen36_agent_serving_policy.py  test_qwen36_server_warmup.py
training/rl/: async_loader.py
